minor adjustments made.

--- a/7. Advanced RAG Pipeline .ipynb
+++ b/7. Advanced RAG Pipeline .ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f062bc67",
    "metadata": {},
    "outputs": [],
@@ -49,11 +49,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "92db80a5",
+   "metadata": {},
+   "source": [
+    "## Playground"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e8fefd49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mathe\\anaconda3\\envs\\deepanalytic\\Lib\\site-packages\\pinecone\\data\\index.py:1: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm\n",
+      "C:\\Users\\mathe\\anaconda3\\envs\\deepanalytic\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:117: LangChainDeprecationWarning: The class `langchain_community.vectorstores.pinecone.Pinecone` was deprecated in langchain-community 0.0.18 and will be removed in 0.2.0. An updated version of the class exists in the langchain-pinecone package and should be used instead. To use it run `pip install -U langchain-pinecone` and import as `from langchain_pinecone import Pinecone`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
    "source": [
     "from pinecone import Pinecone\n",
     "from tqdm.autonotebook import tqdm\n",
@@ -84,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "3111de88",
    "metadata": {},
    "outputs": [
@@ -93,11 +112,11 @@
       "text/plain": [
        "['What does Socrates think about death?',\n",
        " 'How does Socrates view death in relation to the concept of the soul?',\n",
-       " \"What are Socrates' beliefs about the afterlife?\",\n",
+       " \"What are Socrates' beliefs regarding the afterlife?\",\n",
        " \"How does Socrates' perspective on death influence his philosophical teachings?\"]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "id": "96276cb5",
    "metadata": {},
    "outputs": [
@@ -162,11 +181,11 @@
      "data": {
       "text/plain": [
        "['What does Socrates think about death?',\n",
-       " \"What are Socrates' beliefs regarding the afterlife?\",\n",
-       " 'How does Socrates view the concept of mortality?']"
+       " 'How does Socrates view death in relation to the concept of the soul?',\n",
+       " \"What are Socrates' beliefs regarding the afterlife?\"]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,21 +196,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "5d702a83",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['What does Socrates think about death?',\n",
-       " \"What are Socrates' beliefs regarding the afterlife?\",\n",
-       " 'How does Socrates view the concept of mortality?',\n",
-       " 'What arguments does Socrates present in relation to death?',\n",
-       " \"What impact does Socrates' perspective on death have on his philosophical teachings?\"]"
+       "['How can al-Farabi’s metaphysical concepts of intellect and being combine with the principles of a priori knowledge and abduction to enhance philosophical methodologies?',\n",
+       " \"What are al-Farabi's metaphysical concepts of intellect and being?\",\n",
+       " 'How do a priori knowledge and abduction contribute to philosophical methodologies?',\n",
+       " \"How can intellect and being be understood in the context of al-Farabi's metaphysical concepts?\",\n",
+       " 'What role does abduction play in the process of combining these concepts with a priori knowledge?',\n",
+       " 'How do these combined principles enhance philosophical methodologies?']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +259,7 @@
     "    query_generation_chain = [x for x in query_generation_chain if len(x) > 1]\n",
     "    return query_generation_chain\n",
     "\n",
-    "queries = generate_queries(llm,\"What does Socrates think about death?\",5)\n",
+    "queries = generate_queries(llm,\"How can al-Farabi’s metaphysical concepts of intellect and being combine with the principles of a priori knowledge and abduction to enhance philosophical methodologies?\",5)\n",
     "queries"
    ]
   },
@@ -252,18 +272,20 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "166105b8",
+   "cell_type": "markdown",
+   "id": "061ed622",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Pipeline"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 16,
    "id": "99077406",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -273,23 +295,25 @@
       "Do you want to change your default OpenAI API key? (y/n): \n",
       "Do you want to change your default Cohere API key? (y/n): \n",
       "\n",
-      "Available indexes to connect to: ['langchain-retrieval-augmentation', 'rag-test-3', 'canopy--advanced-rag', 'langchain-multi-query-demo', 'naive-rag-chunk400-text-embedding-3-small-cos']\n",
-      "Enter the name of the index you want to connect to: rag-test-3\n",
+      "Available indexes to connect to: ['chunk-1000-text-embedding-3-small', 'chunk1000-text-embedding-3-large-1024', 'chunk1500-text-embedding-3-large-3072', 'chunk400-text-embedding-3-large-512', 'chunk800-text-embedding-3-large-512', 'chunk200-text-embedding-3-small', 'rag-test-3', 'naive-rag-chunk400-text-embedding-3-small-cos']\n",
+      "Enter the name of the index you want to connect to: chunk1500-text-embedding-3-large-3072\n",
       "\n",
       "Available Embedding models to embed your query: [text-embedding-3-small, text-embedding-3-large, embed-english-light-v2.0, embed-english-light-v3.0]\n",
-      "Enter the name of the embedding model you want to use: text-embedding-3-small\n",
+      "Enter the name of the embedding model you want to use: text-embedding-3-large\n",
       "\n",
       "Available LLM models: [gpt-3.5-turbo, gpt-4, ...]\n",
       "Enter the name of the LLM model you want to use: gpt-3.5-turbo\n",
       "\n",
       "Enter a temperature value (0.0 to 1.0): 0\n",
       "\n",
-      "How many queries to produce? More complex questions benefit from more sub-questions: 3\n",
-      "Produced queries: ['What does Socrates think about death?', \"What were Socrates' beliefs regarding the afterlife?\", 'How did Socrates view the concept of mortality?']\n",
+      "How many queries to produce? More complex questions benefit from more sub-questions: 2\n",
+      "Produced queries: ['What does Socrates think about death?', \"What were Socrates' beliefs regarding the afterlife?\"]\n",
       "\n",
-      "How many documents to retrieve per generated query? 4\n",
+      "How many documents to retrieve per generated query? 2\n",
       "\n",
-      "Do you want to rerank the results using a reranker, critique functions, or neither? (r/c/n) n\n"
+      "Do you want to rerank the results using a reranker, critique functions, or neither? (r/c/n) r\n",
+      "\n",
+      "Which reranker model? [rerank-english-v2.0, rerank-english-v3.0] rerank-english-v3.0\n"
      ]
     }
    ],
@@ -553,11 +577,12 @@
     "                    evals = crit[1]\n",
     "                    relevance = evals['relevance']\n",
     "\n",
-    "                    if relevance >= 0.9 and weighted_score > 0.5:\n",
+    "                    if relevance >= 0.7 and weighted_score > 0.5:\n",
     "                        triples.append((query, doc, crit))  # Store all matching triples\n",
     "\n",
     "                # Sort triples based on relevance and weighted_score, both in descending order\n",
     "                sorted_triples = sorted(triples, key=lambda x: (x[2][1]['relevance'], x[2][0]), reverse=True)\n",
+    "                print(sorted_triples)\n",
     "                sorted_triples = sorted_triples[0]\n",
     "\n",
     "                if sorted_triples:\n",
@@ -588,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 17,
    "id": "14d70b0f",
    "metadata": {
     "scrolled": false
@@ -598,10 +623,11 @@
      "data": {
       "text/plain": [
        "('What does Socrates think about death?',\n",
-       " Document(page_content=\"It is probably true that in mainstream fifth century Greek culture,\\nbelief in an afterlife of the soul was weak and unclear (Claus 1981,\\n68; Burnet 1916, 248-9). If so, it is fitting that Socrates' arguments\\nfor the immortality of the soul, most prominently in the\\nPhaedo, are offered to interlocutors who, at the outset of the\\ndiscussion, are by no means convinced of the idea. (In fact, in the\\nApology, 40c, Socrates himself is presented as being\\nnoncommittal about what happens to the soul at death, and even about\\nwhether it survives at all.) “Men find it very hard to\\nbelieve”, Cebes says at Phaedo 70a, “what you said\\nabout the soul. They think that after it has left the body it no\\nlonger exists anywhere, but that it is destroyed and dissolved on the\\nday the man dies.” This view is restated by Simmias (at 77b) as\\nthe opinion of the majority (cf. 80d); note that the view includes the\\nidea that the soul is a material thing, and is destroyed by being\\ndispersed, “like breath or smoke” (70a). Glaucon, in the\\nlast book of the Republic (608d), is taken aback by\\nSocrates' question,\\n\\n\\n“Haven't you realized that our soul is immortal and never\\ndestroyed?”\\n\\nHe looked at me with wonder and said: “No, by god, I\\nhaven't. Are you really in a position to assert that?”\", metadata={'article_id': '76', 'authors': ['Hendrik Lorenz --- hlorenz@princeton.edu'], 'chunk': 9.0, 'citation': 'https://plato.stanford.edu/cgi-bin/encyclopedia/archinfo.cgi?entry=ancient-soul', 'date': '2009', 'source': 'https://plato.stanford.edu/archives/spr2024/entries/ancient-soul/', 'title': 'Ancient Theories of Soul'}))"
+       " [Document(page_content=\"It is probably true that in mainstream fifth century Greek culture,\\nbelief in an afterlife of the soul was weak and unclear (Claus 1981,\\n68; Burnet 1916, 248-9). If so, it is fitting that Socrates' arguments\\nfor the immortality of the soul, most prominently in the\\nPhaedo, are offered to interlocutors who, at the outset of the\\ndiscussion, are by no means convinced of the idea. (In fact, in the\\nApology, 40c, Socrates himself is presented as being\\nnoncommittal about what happens to the soul at death, and even about\\nwhether it survives at all.) “Men find it very hard to\\nbelieve”, Cebes says at Phaedo 70a, “what you said\\nabout the soul. They think that after it has left the body it no\\nlonger exists anywhere, but that it is destroyed and dissolved on the\\nday the man dies.” This view is restated by Simmias (at 77b) as\\nthe opinion of the majority (cf. 80d); note that the view includes the\\nidea that the soul is a material thing, and is destroyed by being\\ndispersed, “like breath or smoke” (70a). Glaucon, in the\\nlast book of the Republic (608d), is taken aback by\\nSocrates' question,\\n\\n\\n“Haven't you realized that our soul is immortal and never\\ndestroyed?”\\n\\nHe looked at me with wonder and said: “No, by god, I\\nhaven't. Are you really in a position to assert that?”\\n\\n\\n Moreover, apart from the question of immortality or otherwise, there\\nis the further question whether the soul, if it does have some form of\\nexistence after the person has died, “still possesses some power\\nand wisdom” (Phaedo, 70b; cf. 76c).  Answering both\\nquestions, Socrates says not only that the soul is immortal, but also\\nthat it contemplates truths after its separation from the body at the\\ntime of death. Needless to say, none of the four main lines of\\nargument that Socrates avails himself of succeeds in establishing the\\nimmortality of the soul, or in demonstrating that disembodied souls\\nenjoy lives of thought and intelligence. The arguments have been\\ndiscussed in some detail, for instance in Bostock 1986, and for our\\npurposes there is no need to state and analyze them systematically. It\\nwill suffice to comment selectively on aspects of the arguments that\\nbear directly on Plato's conception of the soul. The argument that\\nsheds most light on what Plato takes the nature of the soul to be is\\nthe affinity argument (78b-80b). This argument confronts head-on the\\nwidespread worry that the soul, at or soon after death, is destroyed\\nby being dispersed.  It begins by distinguishing between two kinds of\\nthings: on the one hand, things that are perceptible, composed of\\nparts, and subject to dissolution and destruction; on the other hand,\\nthings that are not perceptible, but intelligible (grasped by\\nthought), not composed of parts, and exempt from dissolution and\\ndestruction. These two categories are obviously mutually exclusive. It\\nis not clear whether or not they are meant to be exhaustive.\\nMoreover, the category of imperishable, intelligible being is\\nexemplified, but not, it seems, exhausted, by Platonic forms such as\\nequality, beauty and the like (contra Bostock 1986, 118).\\nIntelligible being evidently includes what Socrates calls the divine,\\nwhose nature it is to rule and to lead (80a), and there is no\\nindication that the forms exhaust the divine, or even include the\\ndivine, so understood.  Thus the argument leaves room for the idea\\nthat souls are not forms, but are nevertheless intelligible, partless\\nand imperishable (contra Robinson 1995, 29). In fact, in\\nframing the argument in the way he does Plato furnishes the conceptual\\nframework needed for saying that body and soul differ in kind, the one\\nbeing perceptible and perishable, the other being intelligible and\\nexempt from destruction. However, the argument does not support such a\\nstrong conclusion, and Socrates is aware of this.  \\n\\n What he does, in fact, conclude is that the soul is most like,\\nand most akin to, intelligible being, and that the body is most\\nlike perceptible and perishable being. To say this is plainly neither\\nto assert nor to imply (as Robinson 1995, 30, appears to think) that\\nsoul in some way or other falls short of intelligible, imperishable\\nbeing, any more than it is to assert or imply that body in some way or\\nother falls short of, or rather rises above, perceptible, perishable\\nbeing. The argument leaves it open whether soul is a perfectly\\nrespectable member of intelligible reality, the way human bodies are\\nperfectly respectable members of perceptible reality, or whether,\\nalternatively, soul has some intermediate status in between\\nintelligible and perceptible being, rising above the latter, but\\nmerely approximating to the former. Socrates does seem to take his\\nconclusion to imply, or at least strongly suggest, that it is natural\\nfor the soul either “to be altogether indissoluble, or nearly\\nso”, but, in any case, that the soul is less subject to\\ndissolution and destruction than the body, rather than, as the popular\\nview has it, more so. If this position can be established, Socrates is\\nin a position to refute the popular view that the soul, being composed\\nof ethereal stuff, is more liable to dispersion and destruction\\nthan the body.  However, as Cebes points out (88b), unless Socrates\\ncan establish that the soul is altogether exempt from destruction,\\nconfidence of survival in the face of death is misplaced. Socrates'\\nsoul may be a great deal more durable than his body, but as long as it\\nis not truly imperishable, there can be no guarantee that it will\\nsurvive Socrates' impending death. For it might have experienced any\\nnumber of incarnations already, and the current one might be its\\nlast. So Socrates launches his most elaborate and final argument for\\nthe immortality of the soul, which concludes that since life belongs\\nto soul essentially, the soul must be deathless — that is,\\nimmortal.\", metadata={'article_id': '76', 'authors': ['Hendrik Lorenz --- hlorenz@princeton.edu'], 'chunk': 3.0, 'citation': 'https://plato.stanford.edu/cgi-bin/encyclopedia/archinfo.cgi?entry=ancient-soul', 'date': '2009', 'source': 'https://plato.stanford.edu/archives/spr2024/entries/ancient-soul/', 'title': 'Ancient Theories of Soul'})],\n",
+       " [RerankResponseResultsItem(document=None, index=0, relevance_score=0.76065063)])"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
