Update Scraping 28 Springer Philosophy Journals.ipynb

--- a/Scraping 28 Springer Philosophy Journals.ipynb
+++ b/Scraping 28 Springer Philosophy Journals.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Scraping 28 Springer Philosophy journals\n",
     "\n",
-    "#### *By: Amirhossein Kiani*\n",
-    "#### *Email: ahosseinkiani@gmail.com*\n",
+    "#### *By: Amir Kiani*\n",
+    "#### *Email: amirkianitech@gmail.com*\n",
     "\n",
     "### Introduction\n",
     "This notebook contains the codes to scrape 28 top philosophy journals from the well-known publisher Springer. This amounts to the data of **781,237** papers in some of the best journals in the world.\n",
